# mintter

./: .bazelignore  .bazelrc  .dockerignore  .envrc  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .gn  .golangci.yaml  .plzconfig  .plzconfig_darwin_arm64  .plzconfig_linux_arm64  .prettierignore  .prettierrc  .terraformignore  .vercelignore  .yarnrc.yml  20201123_mintter.zip.REMOVED.git-id  BUILD.bazel  BUILD.gn  BUILD.plz  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  all-sources.go.list.od  all.do  all.od  all.rc.od  changelog.md  clean.do  codegen.yml  configure.help  configured.do  count.sh  (+40 more)
backend/cmd/mintterd/: BUILD.gn  Dockerfile  db.go  db_test.go  main.go  mintterd.od  peer.go  seed.go  store.go
backend/ui/: BUILD.bazel  BUILD.gn  generate.sh  ui.go
desktop/app/: .gitignore  CONTRIBUTING.md  Cargo.toml  Info.plist  README.md  nightly.tauri.conf.json  nightly.tauri.conf.json5  release.tauri.conf.json  release.tauri.conf.json5  tauri.conf.json  tauri.conf.json5  tauri.linux.conf.json  tauri.linux.conf.json5  tauri.windows.conf.json  tauri.windows.conf.json5
desktop/app/icons/: icon.icns
desktop/app/icons-nightly/: icon.icns
desktop/app/src/: daemon.rs  error.rs  extension_host.rs  extensions.rs  exts.rs  main.rs  menu.rs  system_tray.rs  window.rs  window_ext.rs  window_management.rs
desktop/extension-host/: Cargo.toml
desktop/extension-host/src/: extension.rs  hooks.rs  host.rs  lib.rs  module_loader.rs
desktop/extension-host/tests/: menu.rs  menu.ts  menu.wasm  render_element.rs  render_element.ts  render_element.wasm
desktop/wasi-mtt/: Cargo.toml  README.md  build.rs
desktop/wasi-mtt/src/: ctx.rs  error.rs  impl.rs  lib.rs  witx.rs
desktop/wasi-mtt/wit/: client.wit  error.wit  fetch.wit  log.wit  pledge.wit  poll.wit
desktop/wasi-mtt/witx/: README.md
frontend/: .gitignore  .prettierignore  .yarnrc.yml  BUILD.bazel  BUILD.plz  README.md  TODO.md  all.do  clean.do  package.json  tsconfig.base.json  tsconfig.json  yarn.do
frontend/_app/src/: app-spinner.tsx  app.tsx  author-node.tsx  library.tsx  publisher-node.tsx  use-profile.ts  welcome-provider.tsx  welcome-steps.tsx
frontend/app/: .env.development  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .unimportedrc.json  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  cypress.config.ts  cypress.json  index.html  jest.config.js  package-lock.json  package.json  prerender.mjs  snowpack.config.js  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.ts  web-test-runner.config.js  web-test-runner.config.mjs
frontend/app/.storybook/: preview.jsx
frontend/app/_test/: app-test-utils.tsx  generate.ts  get-selection-mock.js  jsx.ts  setupTests.js
frontend/app/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/app/cypress/: README.md
frontend/app/public/: index.html
frontend/app/src/: TODO.md  _main-page-machine copy.ts  _main-page-machine copy.typegen.ts  activity-machine.ts  api-clients.ts  app-provider.tsx  app-providers.tsx  app.tsx  auth-context.ts  auth-context.tsx  auth-machine.ts  auth-machine.typegen.ts  author-label.tsx  author-node.tsx  authstate-machine.ts  complete-page.tsx  connections.tsx  constants.ts  contact-list-machine.ts  contact-machine.ts  conversation-machine.ts  delete-confirmation-dialog.tsx  delete-dialog-machine.tsx  (+87 more)
frontend/app/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  release.tauri.conf.json  tauri.conf.json
frontend/client/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  BUILD.bazel  CHANGELOG.md  jest.config.js  mock.ts  package.json  tsconfig.json
frontend/data-structure/: Schema.graphql  announcing-byteconf-react-2020.json  document-your-learnings.json  intro-to-react-hooks.json  using-netlify-identity-with-aws-lambda-custom-authorizers.json
frontend/e2e/: dev-server.ts  onboarding.spec.ts  package.json
frontend/gateway/: .eslintrc.json  .prettierignore  Dockerfile  README.md  author.tsx  burger-menu.tsx  client.ts  css-props-generator.js  footer.tsx  gateway-head.tsx  get-focusable-elements.ts  get-site-info.ts  grpc.server.ts  main-layout.tsx  main.css  next.config.mjs  package-lock.json  package.json  page-components.tsx  postcss.config.js  publication-content.tsx  publication-page.tsx  publication-placeholder.tsx  setup-pages.js  site-head.tsx  ssr-publication-page.tsx  tailwind.config.js  tamagui.config.ts  tsconfig.json
frontend/hast-mtt/: .eslintrc.json  README.md  index.ts  jest.config.js  package.json
frontend/mttast/: .eslintignore  package.json  tsconfig.json  vitest.config.ts
frontend/mttast-builder/: index.ts  package.json  tsconfig.json
frontend/mttast-schema/: package.json  schema.json  test.mjs
frontend/playground/: index.js
frontend/shared/: BUILD.plz  package.json
frontend/ui/: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  BUILD.bazel  CHANGELOG.md  jest.config.js  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
frontend/www/: .babelrc.js  .eslintrc  .gitignore  BUILD.bazel  BUILD.gn  CHANGELOG.md  README.md  all-sources.list.do  all.do  build.do  clean.do  deps.list.do  export.do  jest.config.js  next.build.do  next.config.js  next.export.do  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.jest.json  tsconfig.json
proto/: BUILD.bazel  BUILD.gn  CHANGELOG.md  README.md  all.do  clean.do  documents.pb.go  documents.proto  documents_grpc_web_pb.d.ts  documents_grpc_web_pb.js  documents_pb.d.ts  documents_pb.js  generate.do  go-proto.do  js-proto.do  mintter.pb.go  mintter.proto  mintter_grpc_web_pb.d.ts  mintter_grpc_web_pb.js  mintter_pb.d.ts  mintter_pb.js  package.json  proto-go.do  proto-js.do  proto.list  proto.list.do
proto/p2p/: BUILD.gn  p2p.proto
proto/peer/: annotations.proto
proto/sites/: sites.proto
proto/v2/: BUILD.gn  blockMocks.js  documents.pb.go  documents.proto  documents_grpc_web_pb.d.ts  documents_grpc_web_pb.js  documents_pb.d.ts  documents_pb.js  generate.do  mintter.proto
(+3406 files in other folders)
