load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "e3151d87910f69cf1fc88755392d7c878034a69d6499b287bcfc00b1cf9bb415",
    strip_prefix = "bazel-lib-1.32.1",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v1.32.1/bazel-lib-v1.32.1.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "register_jq_toolchains", "register_yq_toolchains")

aspect_bazel_lib_dependencies()

register_jq_toolchains()

register_yq_toolchains()

local_repository(
    name = "rules_impure",
    path = "./build/rules_impure",
)

load("@rules_impure//:defs.bzl", "tool")

tool(
    name = "go",
    version_command = "version",
    version_match = "1.22.3",
)

tool(
    name = "node",
    version_command = "--version",
    version_match = "20.2.0",
)

tool(
    name = "yarn",
    version_command = "--version",
    version_match = "3.5.1",
)
