# This is a very coarse grained build file. We depend on all the sources to build our web app.

load("//build:rules.bzl", "local_action")

filegroup(
    name = "sources",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.jsx",
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.jsx",
            "**/package.json",
            "**/tsconfig.json",
            "**/*.config.ts",
            "**/*.config.js",
        ] + ["app/index.html"],
        exclude = ["node_modules"],
    ),
)

local_action(
    name = "app",
    srcs = [":sources"],
    outs = ["app/dist"],
    cmd = """
cd app
rm -rf dist
yarn build
mv $(pwd)/dist/ $TARGET_OUT_DIR/app/dist
""",
    dir = True,
    visibility = ["//visibility:public"],
    deps = [
        "//:yarn",
        "//proto:js",
    ],
)
