# This is a very coarse grained build file. We depend on all the sources to build our web app.

load("//build:rules.bzl", "local_action")

local_action(
    name = "app",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.jsx",
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.jsx",
            "**/package.json",
            "**/tsconfig.json",
            "**/*.config.ts",
            "**/*.config.js",
        ] + ["app/index.html"],
        exclude = [
            "node_modules",
            "**/node_modules/**",
            "app/src-tauri/**",
            "app/dist/**",
        ],
    ),
    outs = ["app/dist"],
    cmd = """
cd app
rm -rf dist
yarn generate
mv $(pwd)/dist/ $TARGET_OUT_DIR/app/dist
""",
    dir = True,
    visibility = ["//visibility:public"],
    deps = [
        "//:yarn",
        "//proto:js",
    ],
)

# local_action(
#     name = "tauri",
#     srcs = glob(
#         [
#             "app/src-tauri/**",
#         ],
#         exclude = [
#             "app/src-tauri/target/**",
#         ],
#     ),
#     outs = ["out.tauri"],
#     cmd = """
# cd app
# tauri build &> $(git rev-parse --show-toplevel)/bazel-out/tauri-build-output
# touch $TARGET_OUT_DIR/out.tauri
# """,
#     deps = [
#         ":app",
#         "//:mintterd",
#     ],
# )
