group("go") {
  deps = [
    "//proto/accounts/v1alpha:go_proto",
    "//proto/daemon/v1alpha:go_proto",
    "//proto/documents/v1alpha:go_proto",
    "//proto/networking/v1alpha:go_proto",
    "//proto/p2p:go_proto",
    "//proto/v2:go_proto",
  ]
}

group("js") {
  deps = [
    "//proto/accounts/v1alpha:js_proto",
    "//proto/daemon/v1alpha:js_proto",
    "//proto/documents/v1alpha:js_proto",
    "//proto/networking/v1alpha:js_proto",
    "//proto/v2:js_proto",
  ]
}
