load("//build:rules.bzl", "local_action")

local_action(
    name = "bindata",
    srcs = [
        "generate.sh",
        "ui.go",
    ],
    outs = ["rice-box.go"],
    cmd = """
PACKAGE_NAME="ui"
. ./generate.sh
ln -s $(pwd)/rice-box.go $TARGET_OUT_DIR/rice-box.go
""",
    tools = [
        "//tools:rice",
    ],
    visibility = ["//visibility:public"],
    deps = ["//frontend/www:export"],
)
