[package]
authors = ["The Mintter Team"] 
build = "build.rs" 
default-run = "mintter" 
description = "A publishing platform where other content creators can reuse your content keeping your authorship and royalties." 
edition = "2021" 
license = "" 
name = "mintter" 
repository = "" 
version = "0.0.0" # don't touch! This gets overriden with the correct version by CI.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.4", features = [] }

[dependencies]
anyhow = "1.0.64"
# async-trait = "0.1.56"
env_logger = "0.9.1"
# futures-util = "0.3.21"
log = "0.4.17"
# semver = {version = "1.0.12", features = ["serde"] }
secmem-proc = "0.1.1"
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tauri = {version = "1.0.6", features = ["cli", "dialog-message", "shell-execute", "shell-open", "system-tray", "window-maximize", "window-start-dragging", "window-unmaximize"] }
tauri-plugin-log = {git = "https://github.com/tauri-apps/tauri-plugin-log", rev = "9de1279760f31bc6f71da8555336e10c412387e3", features = ["colored"] }
tauri-plugin-store = {git = "https://github.com/tauri-apps/tauri-plugin-store", rev = "5726952177b88d1d10063cdf8e7506bac84772cf"}
thiserror = "1.0.34"
tokio = {version = "1.21.0", features = ["full"] }
tracing = "0.1.36"
url = "2.3.1"
workspace-hack = {version = "0.1", path = "../workspace-hack"}
# wasi-common = "0.38.1"
# wasi-mtt = {path = "../wasi-mtt"}
# wasmparser = "0.87.0"
# wasmtime = "0.38.1"
# wasmtime-wasi = "0.38.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "0.18.0"

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.17.0"
windows = "0.37.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
