[package]
authors = ["The Mintter Team"] 
build = "build.rs" 
default-run = "mintter" 
description = "A publishing platform where other content creators can reuse your content keeping your authorship and royalties." 
edition = "2021" 
license = "" 
name = "mintter" 
repository = "" 
version = "0.0.0" # don't touch! This gets overriden with the correct version by CI.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {git = "https://github.com/tauri-apps/tauri", features = [] }

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
log = "0.4.17"
ringbuffer = "0.10.0"
secmem-proc = "0.2.1"
semver = {version = "1.0.14", features = ["serde"] }
sentry = {version = "0.27", features = ["tracing"] }
sentry-tauri = {git = "https://github.com/JonasKruckenberg/sentry-tauri", branch = "next"}
serde = {version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tauri = {git = "https://github.com/tauri-apps/tauri", features = ["dialog-message", "dialog-save", "fs-write-file", "http-request", "path-all", "process-exit", "process-relaunch", "reqwest-native-tls-vendored", "shell-execute", "shell-open", "system-tray", "window-close", "window-hide", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
tauri-plugin-log = {git = "https://github.com/tauri-apps/tauri-plugin-log", rev = "44015721cca125f72486ec23a7f40a10f1b35c4c", features = ["colored"] }
tauri-plugin-store = {git = "https://github.com/tauri-apps/tauri-plugin-store", rev = "3022f251530d83c6c07b67519bba63d4f57c8c66"}
thiserror = "1.0.37"
tokio = {version = "1.22.0", features = ["sync", "macros"] }
tracing = "0.1.37"
url = "2.3.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "0.18.2"

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.19.1"
windows = "0.39.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
