[package]
name = "extension-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bitflags = "1.3.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasmtime = "0.35.1"
wasmtime-wasi = { version = "0.35.1", features = ["tokio"] }
wasi-common = "0.35.1"
env_logger = "0.9.0"
cap-std = "0.24.2"
thiserror = "1.0.30"
futures-util = "0.3.21"
async-trait = "0.1.53"
semver = { version = "1.0.7", features = ["serde"] }
cached = "0.34.0"
tracing = "0.1.32"
common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = "0.3.9"
