[package]
name = "extension-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bitflags = "1.3.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
wasmtime = "0.38.0"
wasmtime-wasi = { version = "0.38.0", features = ["tokio"] }
wasi-common = "0.38.0"
env_logger = "0.9.0"
cap-std = "0.25.0"
thiserror = "1.0.31"
futures-util = "0.3.21"
async-trait = "0.1.56"
semver = { version = "1.0.10", features = ["serde"] }
cached = "0.34.1"
tracing = "0.1.35"
common = { path = "../common" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tracing-subscriber = "0.3.11"
