[package]
edition = "2021"
name = "wasi-mtt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0.64"
futures-util = "0.3.24"
tauri = "1.0.5"
thiserror = "1.0.34"
tokio = "1.21.0"
tracing = "0.1.36"
wasmtime = "0.39.1"
wiggle = "0.39.1"
workspace-hack = {version = "0.1", path = "../workspace-hack"}

[build-dependencies]
walkdir = "2.3.2"

[badges]
maintenance = {status = "experimental"}
