[package]
edition = "2021"
name = "wasi-mtt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0.66"
futures-util = "0.3.25"
tauri = "1.2.0"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.37"
wasmtime = "2.0.1"
wiggle = "2.0.1"
workspace-hack = {version = "0.1", path = "../workspace-hack"}

[build-dependencies]
walkdir = "2.3.2"

[badges]
maintenance = {status = "experimental"}
