[package]
edition = "2021"
name = "wasi-mtt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0.66"
futures-util = "0.3.25"
log = "0.4.17"
tauri = {git = "https://github.com/tauri-apps/tauri", features = ["http-all"]}
thiserror = "1.0.37"
tokio = "1.23.0"
tracing = "0.1.37"
wasmtime = {git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"]}
wit-bindgen-host-wasmtime-rust = {git = "https://github.com/bytecodealliance/wit-bindgen", features = ["tracing"]}
workspace-hack = {version = "0.1", path = "../workspace-hack"}

[build-dependencies]
walkdir = "2.3.2"

[badges]
maintenance = {status = "experimental"}
