load("//build:rules.bzl", "local_action")

local_action(
    name = "app",
    srcs = [
        "//frontend/client:sources",
        "//frontend/ui:sources",
    ] + glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/**/*.js",
        "src/**/*.jsx",
        "public/**",
    ]) + [
        "package.json",
        "tsconfig.json",
        "vite.config.ts",
        "index.html",
        "//:tsconfig.json",
        "//:tsconfig.base.json",
    ],
    outs = ["dist"],
    cmd = """
rm -rf dist
yarn build
cp -Rs $(pwd)/dist/ $TARGET_OUT_DIR/dist
""",
    dir = True,
    deps = [
        "//:yarn",
    ],
)
