filegroup(
    name = "sources",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/**/*.js",
        "src/**/*.jsx",
        "hooks/**/*.ts",
        "hooks/**/*.tsx",
        "hooks/**/*.js",
        "hooks/**/*.jsx",
        ".generated/**/*.ts",
        ".generated/**/*.tsx",
        ".generated/**/*.js",
        ".generated/**/*.jsx",
    ]) + [
        "package.json",
        "tsconfig.json",
    ],
    visibility = ["//frontend:__subpackages__"],
)
