[package]
name = "mintter"
version = "0.1.0"
description = "A publishing platform where other content creators can reuse your content keeping your authorship and royalties."
authors = ["The mintter team"]
license = ""
repository = ""
default-run = "mintter"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["shell-execute", "system-tray"] }
tokio = { version = "1.12.0", features = ["full"] }
tauri-plugin-log = { git = "https://github.com/JonasKruckenberg/tauri-plugin-log", branch = "target-webview" }
log = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
