[package]
name = "Mintter"
version = "0.1.0"
description = "A publishing platform where other content creators can reuse your content keeping your authorship and royalties."
authors = ["The mintter team"]
license = ""
repository = ""
default-run = "Mintter"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["shell-execute", "shell-open", "system-tray"] }
tokio = { version = "1.12.0", features = ["full"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log" }
log = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
