import("//build/protobuf/protobuf.gni")
import("//build/sources/sources.gni")

stamped_sources("proto_sources") {
  sources = [ "*.proto" ]
}

proto_library("go_proto") {
  deps = [ ":proto_sources" ]
  outputs = [ "$root_build_dir/../api/go/backend/v1alpha/daemon.pb.go" ]
  language = "go"
}

proto_library("js_proto") {
  deps = [ ":proto_sources" ]
  outputs = [ "$root_build_dir/../api/js/backend/v1alpha/daemon_pb.js" ]
  language = "js"
}
