import("//build/protobuf/protobuf.gni")
import("//build/sources/sources.gni")

stamped_sources("proto_sources") {
  sources = [ "*.proto" ]
}

proto_library("go_proto") {
  deps = [ ":proto_sources" ]
  outputs = [ "$root_build_dir/../api/go/documents/v1alpha/README.md" ]
  language = "go"
}

proto_library("js_proto") {
  deps = [ ":proto_sources" ]
  outputs = [ "$root_build_dir/../api/js/documents/v1alpha/README.md" ]
  language = "js"
}
